--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,15 @@
   "name": "kisan-helper-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.0",
+    "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,7 +18,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "three": "^0.173.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +50,5 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
